--- a/SamsungIoTWebAPI/appsettings.json
+++ b/SamsungIoTWebAPI/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SamsungIoTWebAPIContext": "Server=(localdb)\\mssqllocaldb;Database=SamsungIoTWebAPIContext-20be4890-6e74-449f-b0f1-552b68c79541;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
