--- a/SamsungIoTClient/SamsungIoTClient/SamsungIoTClient.csproj
+++ b/SamsungIoTClient/SamsungIoTClient/SamsungIoTClient.csproj
@@ -24,5 +24,8 @@
     <EmbeddedResource Update="Views\BoilerStatusListViewPage1.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\RoomsStatusListPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
