--- a/SamsungIoTClient/SamsungIoTClient.Android/SamsungIoTClient.Android.csproj
+++ b/SamsungIoTClient/SamsungIoTClient.Android/SamsungIoTClient.Android.csproj
@@ -48,6 +48,9 @@
     <AotAssemblies>false</AotAssemblies>
     <EnableLLVM>false</EnableLLVM>
     <BundleAssemblies>false</BundleAssemblies>
+    <MandroidI18n />
+    <AndroidLinkMode>SdkOnly</AndroidLinkMode>
+    <AndroidLinkTool>proguard</AndroidLinkTool>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
